# rl-train

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
examples/: example_usage.py
lightbgm/: __init__.py  dataset.py  features.py  plots.py
lightbgm/data_sources/: __init__.py  historical_generator.py
lightbgm/indicators/: __init__.py  botardo_compatibility.py  consolidated_features.py  mq5_strategy_replicator.py
lightbgm/modeling/: predict.py  train.py
lightbgm/optimization/: __init__.py  optuna_optimizer.py
lightbgm/scoring/: __init__.py  setup_scorer.py
